修改allure报告数据保存路径

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,7 +6,7 @@ markers=main
 ;addopts=-s
 ;addopts=-s --html=./report.html
 ;addopts=-s -q --alluredir ../report/allure --html ../report/report.html --self-contained-html
-addopts=-s -q --alluredir ./report/allure --html ./report/report.html --self-contained-html
+addopts=-s -q --alluredir ./allure-results --html ./report/report.html --self-contained-html
 # file name
 python_files=test_*.py test*.py
 # Class name
